# local-satchel

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PRD.md  ROADMAP.md  UX.md
docs/research/: windows-llamacpp-cuda-spike.md
examples/hermes/: provider-config.md
model-catalog/: models.json
scripts/: install-local-satchel.ps1  push-to-github.sh
src/local_satchel/: __init__.py  assets.py  catalog.py  cli.py  doctor.py  recommend.py
src/local_satchel/model_catalog/: models.json
tests/: conftest.py  test_cli.py  test_doctor.py  test_recommend.py
